# pw2mqtt

./: Readme.md  meson.build
mqtt/: mqtt.c  mqtt.h
src/: main.c  main.h  mqtt.c  mqtt.h  node_instance.c  node_instance.h  pipewire.c  pipewire.h
